bulma入れた&ページ作ってコンポーネントを呼び出し

--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "bulma": "^0.9.4",
+    "nuxt": "^3.5.2",
+    "sass": "^1.62.1"
   }
 }
